--- a/Clase03(JAVA8)/.project
+++ b/Clase03(JAVA8)/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Clase03</name>
+	<name>Clase03(JAVA8)</name>
 	<comment></comment>
 	<projects>
 	</projects>
