--- a/Clase04 (JAVA 8)/.project
+++ b/Clase04 (JAVA 8)/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Clase04</name>
+	<name>Clase04 (JAVA 8)</name>
 	<comment></comment>
 	<projects>
 	</projects>
