--- a/ProyectoFinal/src/main/webapp/WEB-INF/web.xml
+++ b/ProyectoFinal/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,14 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <servlet>
+  	<servlet-name>Autenticacion</servlet-name>
+  	<display-name>Autenticacion</display-name>
+  	<description></description>
+  	<servlet-class>com.curso.java.servlets.Autenticacion</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>Autenticacion</servlet-name>
+  	<url-pattern>/Autenticacion</url-pattern>
+  </servlet-mapping>
 </web-app>
